# Taconite

./: Cargo.toml  README.md
examples/: ecs.rs  input_test.rs  new_year.rs  no_window.rs  render_test.rs  start.rs  window.rs  window_with_ecs.rs
src/: components.rs  engine.rs  errors.rs  event_handler.rs  input_handler.rs  lib.rs  logging.rs  math.rs  new_year.rs  render_systems.rs  renderer.rs  resource_handler.rs  sdl_fronts.rs  state.rs  texture_manager.rs  thread_pool.rs  types.rs  window_config.rs  window_starter.rs
src/ecs/: component_manager.rs  entity.rs  entity_manager.rs  mod.rs  system.rs  world.rs
src/shaders/: col.frag  tri.vert
