[package]
name = "taconite"
version = "0.1.0"
edition = "2021"
authors = ["TeaSpillStudios <TeaSpillStudios@proton.me>"]
license = "MIT"
homepage = "https://TeaSpillStudios.co.uk/taconite"
repository = "https://github.com/TeaSpillStudios/Taconite"
description = "A simple game engine wrote in rust for simplicity, speed and memory safety."

[dependencies]
num_cpus = "1.15.0"
sdl2 = { version = "0.35.2", features = ["image", "gfx"] }
tracing = "0.1.37"

[lib]
name = "taconite"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tracing-subscriber = "0.3.17"
