[package]
name = "taconite"
version = "0.1.0"
edition = "2021"
authors = ["TeaSpillStudios <TeaSpillStudios@proton.me>"]
license = "MIT"
homepage = "https://TeaSpillStudios.co.uk/taconite"
repository = "https://github.com/TeaSpillStudios/Taconite"
description = "A simple game engine wrote in rust for simplicity, speed and memory safety."

[dependencies]
anyhow = "1.0.71"
num_cpus = "1.15.0"
thiserror = "1.0.40"
tracing = "0.1.37"
wgpu = "0.16.0"
winit = "0.28.6"

[lib]
name = "taconite"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tracing-subscriber = "0.3.17"
